--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -142,7 +142,7 @@ geom_hline(yintercept = 0, color="red")+ theme_bw()
 ```
  
  
-<p align="justify"> $\quad$ Por fim, vamos verificar terceira suposição: a normalidade dos resíduospor meio do gráfico quantil-quantil (q-q) que é uma ferramenta muito útil para checar adequação de distribuição de frequência dos resíduos à distribuição Normal. O gráfico q-q é melhor que o histograma e o gráfico de distribuição acumulada empírica porque nós temos mais habilidade para verificar se uma reta se ajusta aos pontos do que se uma curva de densidade se ajusta a um histograma ou uma curva de probabilidade acumulada se ajusta à acumulada empírica. Se os resíduos são normais, os pontos do gráfico devem estar próximos e em torno da reta, de forma aleatória, sem seguir nenhum padrão, como é mostrado na Figura 5. Conjuntamente com a análise gráfica vamos utilizar um dos testes estatísticos mais conhecidos para verificar a normalidade, o teste de *Shapiro-Wilk*, em que as hipóteses são: </p>
+<p align="justify"> $\quad$ Por fim, vamos verificar terceira suposição: a normalidade dos resíduos por meio do gráfico quantil-quantil (q-q) que é uma ferramenta muito útil para checar adequação de distribuição de frequência dos resíduos à distribuição Normal. O gráfico q-q é melhor que o histograma e o gráfico de distribuição acumulada empírica, pois temos mais habilidade para verificar se uma reta se ajusta aos pontos do que se uma curva de densidade se ajusta a um histograma ou uma curva de probabilidade acumulada se ajusta à acumulada empírica. Se os resíduos são normais, os pontos do gráfico devem estar próximos e em torno da reta, de forma aleatória, sem seguir nenhum padrão, como é mostrado na Figura 5. Conjuntamente com a análise gráfica, vamos utilizar um dos testes estatísticos mais conhecidos para verificar a normalidade, o teste de *Shapiro-Wilk*, em que as hipóteses são: </p>
 
 $H_0:$ A amostra vem de uma distribuição Normal   versus   $H_1:$ A amostra não vem de uma distribuição Normal
 
