--- a/codigo.Rmd
+++ b/codigo.Rmd
@@ -76,7 +76,7 @@ ou seja, $a= 33675,67$ e $b= 515,12$ O coeficiente de correlação obtido é $R^
 | a         	| `r  format(coefficients(fit)[2], scientific=FALSE,dec=",")` 	| `r round(summary(fit)$coefficients[2,4],1)`  	|
 | b         	| `r format(round(coefficients(fit)[1],2),scientific=FALSE,dec=",")`                  	| `r round(summary(fit)$coefficients[1,4],1)`  	|    
 
-<p align="justify"> Tabela 2: Tabela resultado da ANOVA - Estimativas  para os parêmetros $a$ e $b$, onde o parâmetro $b$ é chamado intercepto e representa o ponto em que a curva analítica corta o eixo dos y's, quando Concentração = 0. E o parâmetro $a$ representa a inclinação da curva analítica e é dito coeficiente angular. O p-valor dos parâmetros da reta ajustada é a é a probabilidade de se obter uma estatística de teste igual ou mais extrema que aquela observada em uma amostra, sob a hipótese nula. A hipótese nula é de que os parâmetros são iguais a zero. </p>\n   
+<p align="justify"> Tabela 2: Tabela resultado da ANOVA - Estimativas  para os parêmetros $a$ e $b$, onde o parâmetro $b$ é chamado intercepto e representa o ponto em que a curva analítica corta o eixo dos y's, quando Concentração = 0. E o parâmetro $a$ representa a inclinação da curva analítica e é dito coeficiente angular. O p-valor dos parâmetros da reta ajustada é a probabilidade de se obter uma estatística de teste igual ou mais extrema que aquela observada em uma amostra, sob a hipótese nula. A hipótese nula é de que os parâmetros são iguais a zero. </p>\n   
 
 <p align="justify"> $\quad$ Para avaliar a significância dos parâmetros (*a* e *b*), ou seja, se eles são diferentes de zero, vamos observar o p-valor. Dado que o nível de significância sugerido pela Anvisa é 5%, se o p-valor for menor que 0,05 há evidências de que a concentração tem uma associação linear com a área, em um modelo cujo coeficiente angular é diferente de zero (lembrando que dentre as sugestões da Anvisa, o coeficiente angular deve ser significativamente diferente de zero). Para o nosso exemplo, os dois parâmetros são significativos, uma vez que o p-valor de ambos é menor que 0,05. </p>  
 
